# dirichlet-flow-matching

./: pyproject.toml  train_classifier.py  train_dna.py  train_promo.py
lightning_modules/: cls_module.py  dna_module.py  general_module.py  promoter_module.py
utils/: dataset.py  logging.py  parsing.py  promoter_dataset.py
